--- a/css/master.css
+++ b/css/master.css
@@ -25,60 +25,89 @@
 	}
 
 
-
 .header-wrapper{
 	display: flex;
 	justify-content: space-between;
 }	
 
-.block1, .block2, .block3{
+/*###### Header ######*/
+.block1, .block2, .block3,
+.block4, .block5, .block6 {
 	position: relative;
-	height: 100px;	
-	margin: 0px;
 }
 
-.block1 {
-	width: 10%;
+	/*Header Block Sizes*/
+
+	.block1 { flex-basis: 15%; }
+	.block2 { flex-basis: 30%; }
+	.block3 { flex-basis: 50%; text-align: right; }
+	.block6 { width: 50px; height: 50px;}
+	.block3 p {
+		padding-top: 30px;
+		padding-bottom: 30px;
+		padding-right: 30px;
+
+		line-height: 22px;
+		color: #ffffff;
+		font-family: Arial, sans-serif;
+	}
+		 
+		 /*Pseudo Elements*/
+
+		.block1::after, .block2::after, .block3::after, 
+		.block4::after, .block5::after, .block6::after {
+			position: absolute;
+			left: 10px;
+			top: 10px;	
+			
+			color: #ffffff;
+			font-family: Arial, sans-serif;
+			font-size: 24px;
+			font-weight: 700;
+			text-shadow: 3px 3px #000000;
+		}
+			.block1::after{ content: '1'; }
+			.block2::after{ content: '2'; }
+			.block3::after{ content: '3'; }
+			.block4::after{ content: '4'; }
+			.block5::after{ content: '5'; }			
+			.block6::after{ content: '6'; }
+
+
+/*###### MAIN ######*/
+
+main {
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-between;
 }
 
-.block2 {
-	width: 25%;
+section {
+	flex: 5;	
+	margin-left: 30px;
 }
 
-.block3 {
-	width: 50%;
-	text-align: right;
+aside {
+	flex: 1;
 }
 
-.block3 p {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
+.content-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
-.block1::after{
-	position: absolute;
-	left: 5px;
-	top: 5px;
-	content: '1';
-}
-
-.block2::after{
-	position: absolute;
-	left: 5px;
-	top: 5px;
-	content: '2';
-}
-.block3::after{
-	position: absolute;
-	left: 5px;
-	top: 5px;
-	content: '3';
-}
-
+	.block5 {
+		flex: 1;
+		padding: 25px;	
+		margin-bottom: 25px;
+	}
+	.block5 ul {
+		padding: 25px;
+	}
 .gallery{
 	display: flex;
-}
-.block6:after{
-	content: '6';
+	justify-content: space-between;
+	flex-wrap: wrap;
+
 }
