--- a/css/master.css
+++ b/css/master.css
@@ -5,7 +5,7 @@
 .body{
 
 }
-
+hr { margin: 25px 0; }
 .main-wrapper{
 	display: flex;
 	/*justify-content: center;*/
@@ -21,7 +21,7 @@
 		background: #76787a;
 	}
 	.greylight{
-		background: #d9dde0;
+0		background: #d9dde0;
 	}
 
 
@@ -32,7 +32,9 @@
 
 /*###### Header ######*/
 .block1, .block2, .block3,
-.block4, .block5, .block6 {
+.block4, .block5, .block6,
+.block7, .block8, .block9, 
+.block10, .block11, .block12, .block13 {
 	position: relative;
 }
 
@@ -41,7 +43,7 @@
 	.block1 { flex-basis: 15%; }
 	.block2 { flex-basis: 30%; }
 	.block3 { flex-basis: 50%; text-align: right; }
-	.block6 { width: 50px; height: 50px;}
+	.block6 { width: 150px; height: 150px; margin-right: 5px; margin-bottom: 5px;}
 	.block3 p {
 		padding-top: 30px;
 		padding-bottom: 30px;
@@ -55,7 +57,9 @@
 		 /*Pseudo Elements*/
 
 		.block1::after, .block2::after, .block3::after, 
-		.block4::after, .block5::after, .block6::after {
+		.block4::after, .block5::after, .block6::after,
+		.block7::after, .block8::after, .block9::after, 
+		.block10::after, .block11::after, .block12::after, .block13::after {
 			position: absolute;
 			left: 10px;
 			top: 10px;	
@@ -72,7 +76,13 @@
 			.block4::after{ content: '4'; }
 			.block5::after{ content: '5'; }			
 			.block6::after{ content: '6'; }
-
+			.block7::after{ content: '7'; }
+			.block8::after{ content: '8'; }
+			.block9::after{ content: '9'; }
+			.block10::after{ content: '10'; }
+			.block11::after{ content: '11'; }
+			.block12::after{ content: '12'; }
+			.block13::after{ content: '13'; }
 
 /*###### MAIN ######*/
 
@@ -80,6 +90,7 @@ main {
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: space-between;
+	/*margin-bottom: 25px;*/
 }
 
 section {
@@ -100,14 +111,56 @@ aside {
 	.block5 {
 		flex: 1;
 		padding: 25px;	
-		margin-bottom: 25px;
+		margin-bottom: 20px;
 	}
 	.block5 ul {
 		padding: 25px;
 	}
+
 .gallery{
+	margin-bottom: 20px;
+	display: flex;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+}
+
+.content-bottom {
 	display: flex;
 	justify-content: space-between;
-	flex-wrap: wrap;
-
 }
+
+	.block8 {
+		flex: 1;
+		margin-right: 25px;
+	}
+	.block9 {
+		flex: 1;
+	}
+
+	.block8, .block9 p {
+		padding: 25px;
+	}
+
+/*###### Footer ######*/
+.footer-wrapper {
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+}
+	.block10 {
+		width: 250px;
+	}
+	.block10 ul {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+
+	.contacts {
+		display: flex;
+		justify-content: space-between;
+		flex-direction: column;
+	}
+
+		.block12 { flex: 1; }
+		.block13 { flex: 1; }
